# xgym

./: .gitattributes  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py  skipped_episodes.txt  skipped_frames.txt
scripts/: camera.launch.py  camera.py  camera4human.py  debug.launch.py  delete_latest.py  demo.launch.py  embed.py  eval.py  filter.py  get_calibration.py  hamer_client.py  hand_tele.py  human.py  lift.py  main.py  mano_pipe_v3.py  mano_read_npz.py  npz_reader.py  poptree.py  read_memmap.py  read_memmap_visualize.py  read_npz.py  reader.py  reader_rlds.py  ros_sandbox.py  run_from_data.py  sandbox_v2.py  save_test_frame.py  see_image.py  stack.py  stack_model.py  test_safety_box.py  view_calibration.py  view_test_image.py  visualize_predicted_hand.py
scripts/client/: dav2.py
scripts/mano/: server.py  util.py
xgym/: __init__.py  controllers.py  names.py
xgym/calibrate/: __init__.py
xgym/calibrate/urdf/: __init__.py  robot.py
xgym/gyms/: __init__.py  base.py  human.py  lift.py  stack.py
xgym/lrbt/: builder.py  convert.py  from_mano_npz.py  from_memmap.py
xgym/nodes/: __init__.py  bagger.py  base.py  camera.py  controller.py  footpedal.py  gov.py  heleo.py  model.py  robot.py  viz.py  writer.py  xgello.py
xgym/rlds/: base.py
xgym/rlds/util/: __init__.py  _util.py  render.py  trajectory.py  transform.py
xgym/rlds/xgym_duck_mano/: __init__.py  xgym_duck_mano.py
xgym/rlds/xgym_duck_single/: __init__.py  xgym_duck_single.py
xgym/rlds/xgym_lift_mano/: __init__.py  main_nov10.py  xgym_lift_mano.py
xgym/rlds/xgym_lift_single/: __init__.py  xgym_lift_single.py
xgym/rlds/xgym_play_single/: __init__.py  xgym_play_single.py
xgym/rlds/xgym_stack_mano/: __init__.py  xgym_stack_mano.py
xgym/rlds/xgym_stack_single/: __init__.py  xgym_stack_single.py
xgym/rlds/xgym_sweep_single/: __init__.py  xgym_sweep_single.py
xgym/utils/: camera.py
xgym/viz/: __init__.py  mano.py  memmap.py
